   to specify the limit value of z, i.e. Plus or Min.
 - The wavelength can now be complex (Thanks to KC Huang for requesting this)
 - If you're working with circular structures in the regime of backward and
   complex modes (e.g. when the metal wall is close to the last interface),
   you can use set_backward_modes(1) for extra stability.
 
CAMFR 1.2 (2003-11-12):

 - circular structures can now have multiple radial discontinuities (Mihai
   Ibanescu)
 - interactive plotting utilities (Lieven Vanholme) to look at fields,
   animations, Poynting vectors, save to file, zoom in, ... . Try 
   plot(Stack), plot(Slab), plot(BlochStack)
 - improved stability for Slabs, especially for wide photonic crystal
   structures
 - a new solver suitable for high loss materials. See set_solver(series)
 - added various small utility functions: Stack.width(), BlochStack.width(),
   Cavity.width(), Cavity.length(), Cavity.bot_stack(), Cavity.top_stack()
 - the MATLAB bindings are updated to the latest versions of MATLAB and
   pymat (the latter needs to be installed separately from 
   http://pymat.sf.net) (Ross Stanley)


CAMFR 1.1 (2003-03-05):

 - improved stability for Slabs
 - inc_S_flux and ext_S_flux are now much faster
 - Python doesn't terminate abruptly anymore when faced with some user
   errors or lost modes
 - the refractive index profile can now be displayed on top of the 
   field plots (Lieven Vanholme)
 - animation of field profiles is much smoother (Lieven Vanholme)
 - field plots can be saved in a variety of formats (jpg, gif, png, ...)
   Animations can be saved as an (uncompressed) animated gif (Lieven Vanholme)

     e.g. plot_field(s, lambda f : f.E2().real, r_x, r_z, "field.jpg")

 - plot_n and plot_field now works for BlochStacks, BlochModes and Cavities
   too
 - added Stack.fw_bw(z), which returns a tuple of the expansion 
   coefficients of the forward and backward field at position z in the Stack.
   Also works for Blochmodes.
